# ProcWrapper

./: .gitignore  NativeProc.cs  ProcWrapper.sln  Program.cs
artifacts/build-android-arm64-v8a/: CMakeCache.txt  Makefile  cmake_install.cmake
artifacts/build-android-armeabi-v7a/: CMakeCache.txt  Makefile  cmake_install.cmake
artifacts/build-host-x64/: CMakeCache.txt  Makefile  cmake_install.cmake
artifacts/build-host-x86/: CMakeCache.txt  Makefile  cmake_install.cmake
exes/: libssl.so.3
native/: CMakeLists.txt  procwrapper.c
scripts/: build-android-procwrapper.sh  build_all.sh
scripts/build-android-procwrapper/build-arm64-v8a/: CMakeCache.txt  Makefile  cmake_install.cmake
scripts/build-android-procwrapper/build-armeabi-v7a/: CMakeCache.txt  Makefile  cmake_install.cmake
